Achieved stability!