@@ -4,7 +4,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
@@ -18,20 +17,20 @@ public class EntityTranslator {
 	public static final HashMap<String, EntityType<?>> BEDROCK_IDENTIFIER_TO_ENTITY_TYPE = new HashMap<>();
 
 	public static void load() {
-		List<EntityType<?>> allEntityTypes = Registry.ENTITY_TYPE.stream().collect(Collectors.toList());
+		List<EntityType<?>> allEntityTypes = Registry.ENTITY_TYPE.stream().toList();
 
 		for (EntityType<?> e : allEntityTypes) {
 			BEDROCK_IDENTIFIER_TO_ENTITY_TYPE.put(EntityType.getId(e).toString(), e);
 		}
 
-		JsonObject jsonObject = TunnelMC.instance.fileManagement.getJsonObjectFromResource("tunnel/entity_override_translations.json");
+		JsonObject jsonObject = TunnelMC.instance.fileManagement.getJsonFromResource("tunnel/entity_override_translations.json").getAsJsonObject();
 		if (jsonObject == null) {
 			return;
 		}
 
 		for (Map.Entry<String, JsonElement> entry : jsonObject.entrySet()) {
 			Optional<EntityType<?>> optional = EntityType.get(entry.getValue().getAsString());
-			if (!optional.isPresent()) {
+			if (optional.isEmpty()) {
 				System.out.println("Could not find entity type " + entry.getValue().getAsString() + " when reading entity_override_translations.json");
 				continue;
 			}
